Refactored material system | Video support needs review!

--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 35.0,
-            "y": 5.0,
-            "z": 0.0
+            "x": -0.40822523832321167,
+            "y": 13.32237434387207,
+            "z": -7.189051151275635
         },
         "projection": 0,
         "target": {
-            "x": 34.01005172729492,
-            "y": 4.858578681945801,
-            "z": 0.0
+            "x": -0.40840545296669006,
+            "y": 12.407660484313965,
+            "z": -6.784949779510498
         },
         "type": "camera",
         "up": {
@@ -47,13 +47,13 @@
         "is_dynamic": false,
         "lodEnabled": true,
         "mass": 1.0,
-        "material_path": "",
-        "modelPath": "project/game/models/cactus.obj",
-        "name": "project/game/models/cactus",
-        "normalTexturePath": "",
+        "material_path": "project/game/materials/ground.mat",
+        "mesh_type": 4,
+        "modelPath": "",
+        "name": "Unnamed Entity",
         "position": {
             "x": 0.0,
-            "y": 0.0,
+            "y": 1.0,
             "z": 0.0
         },
         "relativePosition": {
@@ -66,26 +66,24 @@
             "y": 0.0,
             "z": 0.0
         },
-        "roughnessTexturePath": "",
         "scale": {
-            "x": 1.0,
+            "x": 10.0,
             "y": 1.0,
-            "z": 1.0
+            "z": 10.0
         },
         "scriptIndex": "",
         "script_path": "",
         "surfaceMaterial": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
+            "DiffuseIntensity": 1.0,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.5
+            "shininess": 1.0
         },
-        "texturePath": "",
         "tiling": [
             1.0,
             1.0
@@ -107,14 +105,14 @@
             "z": -0.4000000059604645
         },
         "id": 2,
-        "intensity": 12.053999900817871,
+        "intensity": 7.420000076293945,
         "isChild": false,
         "light_type": 1,
         "name": "Light",
         "position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 5.0
+            "x": 8.499983787536621,
+            "y": 11.500006675720215,
+            "z": -0.5999974608421326
         },
         "relativePosition": {
             "x": 0,
